--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.0</version> <!-- yoki eng yangisi -->
         </dependency>
 
         <!-- ✅ JWT TOKEN (jjwt) -->
