--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ? MinIO
-minio.endpoint=${MINIO_ENDPOINT:https://minio-flex:9000}
-minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://93.189.228.126:9102}
+minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://93.189.228.126:9102}
 minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
 minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
 minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
