--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
 
 minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
-minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz/minio}
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # Remove /minio
 minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
 minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
 minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
