--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,86 @@
-version: '3.8'
+#version: '3.8'
+#
+#services:
+#  flexvibe-app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: flexvibe-app
+#    image: flexvibe-backend:latest
+#    restart: always
+#    ports:
+#      - "8081:8080"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: postgres
+#      SPRING_PROFILES_ACTIVE: production
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+#      MINIO_ENDPOINT: http://minio-flex:9000
+#      MINIO_PUBLIC_ENDPOINT: http://83.222.19.171
+#      MINIO_ACCESS_KEY: minioadmin
+#      MINIO_SECRET_KEY: minioadmin
+#      MINIO_BUCKET_NAME: flex-bucket
+#    depends_on:
+#      - flexvibe-db
+#      - minio-flex
+#    networks:
+#      - flexvibe-network
+#    volumes:
+#      - ./src/main/resources/logs:/app/logs
+#
+#  flexvibe-db:
+#    image: postgres:16-alpine
+#    container_name: flexvibe-db
+#    restart: always
+#    ports:
+#      - "5434:5432"
+#    environment:
+#      POSTGRES_DB: flexvibe
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#    volumes:
+#      - flexvibe_data:/var/lib/postgresql/data
+#    networks:
+#      - flexvibe-network
+#
+#  minio-flex:
+#    image: minio/minio:latest
+#    container_name: minio-flex
+#    restart: always
+#    command: server --console-address ":9001" /data
+#    ports:
+#      - "9102:9000"
+#      - "9103:9001"
+#    environment:
+#      MINIO_ROOT_USER: minioadmin
+#      MINIO_ROOT_PASSWORD: minioadmin
+#    volumes:
+#      - minio_flex_data:/data
+#    networks:
+#      - flexvibe-network
+#
+#  nginx:
+#    image: nginx:latest
+#    container_name: flexvibe-nginx
+#    restart: always
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./src/main/resources/nginx:/etc/nginx/conf.d
+#    depends_on:
+#      - flexvibe-app
+#    networks:
+#      - flexvibe-network
+#
+#volumes:
+#  flexvibe_data:
+#  minio_flex_data:
+#
+#networks:
+#  flexvibe-network:
+#    driver: bridge
 
 services:
   flexvibe-app:
@@ -15,7 +97,7 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_PROFILES_ACTIVE: production
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop  # Avtomatik ma'lumotlar bazasi yaratish
       MINIO_ENDPOINT: http://minio-flex:9000
       MINIO_PUBLIC_ENDPOINT: http://83.222.19.171
       MINIO_ACCESS_KEY: minioadmin
@@ -57,20 +139,6 @@ services:
       MINIO_ROOT_PASSWORD: minioadmin
     volumes:
       - minio_flex_data:/data
-    networks:
-      - flexvibe-network
-
-  nginx:
-    image: nginx:latest
-    container_name: flexvibe-nginx
-    restart: always
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./src/main/resources/nginx:/etc/nginx/conf.d
-    depends_on:
-      - flexvibe-app
     networks:
       - flexvibe-network
 
