--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ? MinIO
-minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
-minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171:9102}
+#minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
+#minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171:9102}
+#minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+#minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+#minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
+#minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+
+minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}  # backend ichida ishlaydi
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # tashqaridan ko?rinadigan URL
 minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
 minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
-minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
-minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket
 
 #minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
 #minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # Remove /minio
