--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,14 +93,26 @@ services:
     restart: always
     ports:
       - "8081:8080"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: postgres
+#      SPRING_PROFILES_ACTIVE: production
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop  # Avtomatik ma'lumotlar bazasi yaratish
+#      MINIO_ENDPOINT: http://minio-flex:9000
+#      MINIO_PUBLIC_ENDPOINT: http://83.222.19.171:9102
+#      MINIO_ACCESS_KEY: minioadmin
+#      MINIO_SECRET_KEY: minioadmin
+#      MINIO_BUCKET_NAME: flex-bucket
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_PROFILES_ACTIVE: production
-      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop  # Avtomatik ma'lumotlar bazasi yaratish
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
       MINIO_ENDPOINT: http://minio-flex:9000
-      MINIO_PUBLIC_ENDPOINT: http://83.222.19.171:9102
+      MINIO_PUBLIC_ENDPOINT: https://be-dev.uz
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
       MINIO_BUCKET_NAME: flex-bucket
