new storage set up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,74 +1,40 @@
-spring.application.name=FlexVibeProject
-server.port=8080
-
-# ? Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/flexvibe
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# ? MinIO
-#minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
-#minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171:9102}
-#minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
-#minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
-#minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
-#minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
-
-minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}  # backend ichida ishlaydi
-minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # tashqaridan ko?rinadigan URL
-minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
-minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
-minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket
-
-#minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
-#minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # Remove /minio
-#minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
-#minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
-#minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
-#minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
-
-
-# ? Multipart file upload limit
-spring.servlet.multipart.max-file-size=10000MB
-spring.servlet.multipart.max-request-size=10000MB
-
-# ? Email config (optional)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=palankasovbirnarsa@gmail.com
-spring.mail.password=d r x a e f p j j s t r d u t i
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-
-
-#
-#
 #spring.application.name=FlexVibeProject
 #server.port=8080
 #
-## Postgres
+## ? Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/flexvibe
 #spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 #spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
-## MinIO
-#minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
-#minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171}
+## ? MinIO
+##minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
+##minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171:9102}
+##minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+##minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+##minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
+##minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+#
+#minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}  # backend ichida ishlaydi
+#minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # tashqaridan ko?rinadigan URL
 #minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
 #minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
-#minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
-#minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+#minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket
 #
-## Multipart file upload limit
+##minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
+##minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://be-dev.uz}  # Remove /minio
+##minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+##minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+##minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
+##minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+#
+#
+## ? Multipart file upload limit
 #spring.servlet.multipart.max-file-size=10000MB
 #spring.servlet.multipart.max-request-size=10000MB
 #
-## Email config (optional)
+## ? Email config (optional)
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
 #spring.mail.username=palankasovbirnarsa@gmail.com
@@ -77,7 +43,63 @@ spring.mail.properties.mail.smtp.starttls.required=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required=true
 #
-## Swagger (qo'shimcha, agar mavjud bo'lmasa)
-#springdoc.api-docs.path=/v3/api-docs
-#springdoc.swagger-ui.path=/swagger
-#springdoc.swagger-ui.enabled=true
+#
+##
+##
+##spring.application.name=FlexVibeProject
+##server.port=8080
+##
+### Postgres
+##spring.datasource.url=jdbc:postgresql://localhost:5432/flexvibe
+##spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+##spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+##
+### MinIO
+##minio.endpoint=${MINIO_ENDPOINT:http://minio-flex:9000}
+##minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://83.222.19.171}
+##minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+##minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
+##minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
+##minio.bucket.name=${MINIO_BUCKET_NAME:flex-bucket}
+##
+### Multipart file upload limit
+##spring.servlet.multipart.max-file-size=10000MB
+##spring.servlet.multipart.max-request-size=10000MB
+##
+### Email config (optional)
+##spring.mail.host=smtp.gmail.com
+##spring.mail.port=587
+##spring.mail.username=palankasovbirnarsa@gmail.com
+##spring.mail.password=d r x a e f p j j s t r d u t i
+##spring.mail.properties.mail.smtp.auth=true
+##spring.mail.properties.mail.smtp.starttls.enable=true
+##spring.mail.properties.mail.smtp.starttls.required=true
+##
+### Swagger (qo'shimcha, agar mavjud bo'lmasa)
+##springdoc.api-docs.path=/v3/api-docs
+##springdoc.swagger-ui.path=/swagger
+##springdoc.swagger-ui.enabled=true
+
+
+
+spring.application.name=FlexVibeProject
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/flexvibe
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Wasabi S3
+minio.endpoint=${MINIO_ENDPOINT:https://s3.wasabisys.com}
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://s3.wasabisys.com}
+minio.access-key=${MINIO_ACCESS_KEY:B4XHGTU85BLQ53S83RS2}
+minio.secret-key=${MINIO_SECRET_KEY:IllGMvbzrQAOgctJ7U6e8KbZvHNkflXzuVcjKTJt}
+minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
+
+spring.servlet.multipart.max-file-size=10000MB
+spring.servlet.multipart.max-request-size=10000MB
+
