--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,4 @@
-#version: '3.8'
-#
-#services:
-#  flexvibe-app:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    container_name: flexvibe-app
-#    image: flexvibe-backend:latest
-#    restart: always
-#    ports:
-#      - "8081:8080"
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
-#      SPRING_DATASOURCE_USERNAME: postgres
-#      SPRING_DATASOURCE_PASSWORD: postgres
-#      SPRING_PROFILES_ACTIVE: production
-#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-#      MINIO_ENDPOINT: http://minio-flex:9000
-#      MINIO_PUBLIC_ENDPOINT: http://83.222.19.171
-#      MINIO_ACCESS_KEY: minioadmin
-#      MINIO_SECRET_KEY: minioadmin
-#      MINIO_BUCKET_NAME: flex-bucket
-#    depends_on:
-#      - flexvibe-db
-#      - minio-flex
-#    networks:
-#      - flexvibe-network
-#    volumes:
-#      - ./src/main/resources/logs:/app/logs
-#
-#  flexvibe-db:
-#    image: postgres:16-alpine
-#    container_name: flexvibe-db
-#    restart: always
-#    ports:
-#      - "5434:5432"
-#    environment:
-#      POSTGRES_DB: flexvibe
-#      POSTGRES_USER: postgres
-#      POSTGRES_PASSWORD: postgres
-#    volumes:
-#      - flexvibe_data:/var/lib/postgresql/data
-#    networks:
-#      - flexvibe-network
-#
-#  minio-flex:
-#    image: minio/minio:latest
-#    container_name: minio-flex
-#    restart: always
-#    command: server --console-address ":9001" /data
-#    ports:
-#      - "9102:9000"
-#      - "9103:9001"
-#    environment:
-#      MINIO_ROOT_USER: minioadmin
-#      MINIO_ROOT_PASSWORD: minioadmin
-#    volumes:
-#      - minio_flex_data:/data
-#    networks:
-#      - flexvibe-network
-#
-#  nginx:
-#    image: nginx:latest
-#    container_name: flexvibe-nginx
-#    restart: always
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    volumes:
-#      - ./src/main/resources/nginx:/etc/nginx/conf.d
-#    depends_on:
-#      - flexvibe-app
-#    networks:
-#      - flexvibe-network
-#
-#volumes:
-#  flexvibe_data:
-#  minio_flex_data:
-#
-#networks:
-#  flexvibe-network:
-#    driver: bridge
-
+version: '3.8'
 
 services:
   flexvibe-app:
@@ -93,17 +10,6 @@ services:
     restart: always
     ports:
       - "8081:8080"
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
-#      SPRING_DATASOURCE_USERNAME: postgres
-#      SPRING_DATASOURCE_PASSWORD: postgres
-#      SPRING_PROFILES_ACTIVE: production
-#      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop  # Avtomatik ma'lumotlar bazasi yaratish
-#      MINIO_ENDPOINT: http://minio-flex:9000
-#      MINIO_PUBLIC_ENDPOINT: http://83.222.19.171:9102
-#      MINIO_ACCESS_KEY: minioadmin
-#      MINIO_SECRET_KEY: minioadmin
-#      MINIO_BUCKET_NAME: flex-bucket
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://flexvibe-db:5432/flexvibe
       SPRING_DATASOURCE_USERNAME: postgres
@@ -111,14 +17,14 @@ services:
       SPRING_PROFILES_ACTIVE: production
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
-      MINIO_ENDPOINT: http://minio-flex:9000
-      MINIO_PUBLIC_ENDPOINT: https://be-dev.uz
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      # ⚠️ Wasabi endpoint va kalitlari
+      MINIO_ENDPOINT: https://s3.wasabisys.com
+      MINIO_PUBLIC_ENDPOINT: https://s3.wasabisys.com
+      MINIO_ACCESS_KEY: <B4XHGTU85BLQ53S83RS2>
+      MINIO_SECRET_KEY: <IllGMvbzrQAOgctJ7U6e8KbZvHNkflXzuVcjKTJt>
       MINIO_BUCKET_NAME: flex-bucket
     depends_on:
       - flexvibe-db
-      - minio-flex
     networks:
       - flexvibe-network
     volumes:
@@ -139,25 +45,8 @@ services:
     networks:
       - flexvibe-network
 
-  minio-flex:
-    image: minio/minio:latest
-    container_name: minio-flex
-    restart: always
-    command: server --console-address ":9001" /data
-    ports:
-      - "9102:9000"
-      - "9103:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    volumes:
-      - minio_flex_data:/data
-    networks:
-      - flexvibe-network
-
 volumes:
   flexvibe_data:
-  minio_flex_data:
 
 networks:
   flexvibe-network:
