--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,13 +69,13 @@
 ##spring.servlet.multipart.max-request-size=10000MB
 ##
 ### Email config (optional)
-##spring.mail.host=smtp.gmail.com
-##spring.mail.port=587
-##spring.mail.username=palankasovbirnarsa@gmail.com
-##spring.mail.password=d r x a e f p j j s t r d u t i
-##spring.mail.properties.mail.smtp.auth=true
-##spring.mail.properties.mail.smtp.starttls.enable=true
-##spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=palankasovbirnarsa@gmail.com
+spring.mail.password=d r x a e f p j j s t r d u t i
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 ##
 ### Swagger (qo'shimcha, agar mavjud bo'lmasa)
 ##springdoc.api-docs.path=/v3/api-docs
