--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.0</version> <!-- choose a compatible, recent version -->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
