--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,13 +93,12 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Wasabi S3
-minio.endpoint=${MINIO_ENDPOINT:https://s3.wasabisys.com}
-minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://s3.wasabisys.com}
+# Wasabi S3 Configuration
+minio.endpoint=${MINIO_ENDPOINT:https://s3.us-east-1.wasabisys.com}
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:https://s3.us-east-1.wasabisys.com}
 minio.access-key=${MINIO_ACCESS_KEY:B4XHGTU85BLQ53S83RS2}
 minio.secret-key=${MINIO_SECRET_KEY:IllGMvbzrQAOgctJ7U6e8KbZvHNkflXzuVcjKTJt}
 minio.bucket-name=${MINIO_BUCKET_NAME:flex-bucket}
 
 spring.servlet.multipart.max-file-size=10000MB
 spring.servlet.multipart.max-request-size=10000MB
-
