remove explicit logging dependencies to avoid version conflicts with Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -115,24 +115,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.8</version>
-        </dependency>
-
-        <!-- Test -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!-- Logging: use Spring Boot's managed logging dependencies (remove explicit slf4j/logback to avoid version conflicts) -->
     </dependencies>
 
     <build>
